bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `std::marker::PhantomData<[(); 0]>: bitfield::checks::DiscriminantInRange` is not satisfied
  --> $DIR/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `bitfield::checks::DiscriminantInRange` is not implemented for `std::marker::PhantomData<[(); 0]>`
   |
  ::: $WORKSPACE/bitfield/src/lib.rs:30:61
   |
30 |     pub trait CheckDiscriminantInRange<T> where Self::Type: DiscriminantInRange {
   |                                                             ------------------- required by this bound in `bitfield::checks::CheckDiscriminantInRange`
   |
   = help: the following implementations were found:
             <std::marker::PhantomData<[(); 1]> as bitfield::checks::DiscriminantInRange>
